--- a/map.css
+++ b/map.css
@@ -13,3 +13,27 @@
 	font-size: 11px;
 	fill: #3c373d;
 }
+
+.container {
+	width:1000px;
+}
+
+.container2 {
+	width:250px;
+}
+
+.container3 {
+	width:250px;
+}
+
+.container4 {
+	width:250px;
+}
+
+.container5 {
+	width:250px;
+}
+
+.flexingz {
+	display: flex;
+}
