--- a/style/global.css
+++ b/style/global.css
@@ -14,3 +14,16 @@
     flex-direction: row;
     height: 100%;
 }
+
+.map-preloader {
+    display: flex;
+    justify-content : center;
+    align-items : center;
+    height: 55em;
+}
+
+#dropdown {
+    background-color: aliceblue;
+    display: block;
+    z-index: 999;
+}
