Intégration map Index.html

--- a/assets/style/map.css
+++ b/assets/style/map.css
@@ -21,24 +21,8 @@
 	fill: #3c373d;
 }
 
-.container {
-	width:1000px;
-}
-
-.container2 {
-	width:250px;
-}
-
-.container3 {
-	width:250px;
-}
-
-.container4 {
-	width:250px;
-}
-
-.container5 {
-	width:250px;
+.map2{
+	width: 250px;
 }
 
 .flexingz {
