--- a/assets/style/dropdown.css
+++ b/assets/style/dropdown.css
@@ -5,9 +5,10 @@
 #dropdown-content {
     background-color: rgb(56, 66, 66);
     position: absolute;
-    width:10rem;
+    width:15rem;
     z-index: 999;
     overflow: auto !important;
+    max-height: 30rem;
     border-radius: 0rem 0rem 1rem 1rem;
     margin-top: 4rem;
     margin-right: 3rem;
@@ -25,7 +26,7 @@
 .btn-dd {
     float: right;
     height: 2.5rem;
-    width:10rem;
+    width:15rem;
     margin-top: 1.5rem;
     margin-right: 3rem;
 }
