--- a/assets/style/global.css
+++ b/assets/style/global.css
@@ -3,6 +3,8 @@
 @import url("right-tab.css");
 @import url("map.css");
 @import url("dropdown.css");
+@import url("scrollbar.css");
+@import url("charts.css");
 
 .header-container {
     height: 6em;
@@ -20,5 +22,5 @@
     display: flex;
     justify-content : center;
     align-items : center;
-    height: 55em;
+    height: 32em;
 }
