--- a/assets/style/map.css
+++ b/assets/style/map.css
@@ -2,7 +2,8 @@
     height: 100%;
     width: 66%;
     border-right: 2px solid rgb(81, 81, 81);
-    margin-right: 0.2em;
+	margin-top: 5em;
+	margin-right: 0.2em;
 }
 
 .continent {
@@ -27,4 +28,13 @@
 
 .flexingz {
 	display: flex;
+}
+
+.pin {
+	cursor: pointer;
+}
+
+.pin-text {
+	text-shadow: 0.03em 0 rgb(255, 255, 255), 0 0.03em rgb(255, 255, 255), -0.03em 0 rgb(255, 255, 255), 0 -0.03em rgb(255, 255, 255);
+	cursor: pointer;
 }
