--- a/assets/style/global.css
+++ b/assets/style/global.css
@@ -1,21 +1,18 @@
 @import url("color.css");
-@import url("responsive.css");
 @import url("right-tab.css");
 @import url("map.css");
+@import url("charts.css");
 @import url("dropdown.css");
 @import url("scrollbar.css");
-@import url("charts.css");
 
-.header-container {
-    height: 6em;
-    width: auto;
-    border-bottom: 2px solid rgb(81, 81, 81);
+html {
+    background-color: var(--background);
+    font-family: 'Dosis', sans-serif;
+    color: rgb(200, 200, 200);
 }
 
-.body-container {
-    display: flex;
-    flex-direction: row;
-    height: 100%;
+.swipe-nul {
+    height: 55rem
 }
 
 .map-preloader {
