--- a/assets/style/map.css
+++ b/assets/style/map.css
@@ -1,9 +1,25 @@
-.map-container {
-    height: 100%;
-    width: 66%;
-    border-right: 2px solid rgb(81, 81, 81);
-	margin-top: 5em;
-	margin-right: 0.2em;
+@media only screen and (min-width: 0) {
+
+}
+
+@media only screen and (min-width: 601px) {
+	.container {
+		margin-right: 0px;
+		margin-left: 0px;
+		max-width: unset;
+		width: unset;
+		margin: 1em;
+	}
+}
+
+@media only screen and (min-width: 993px) {
+	.container {
+		margin-right: 0px;
+		margin-left: 0px;
+		max-width: unset;
+		width: unset;
+		margin: 1em;
+	}
 }
 
 .continent {
@@ -20,14 +36,6 @@
 	font-family: sans-serif;
 	font-size: 11px;
 	fill: #3c373d;
-}
-
-.map2{
-	width: 250px;
-}
-
-.flexingz {
-	display: flex;
 }
 
 .pin {
